# Kitsu-Lang

./: .gitignore  LICENSE  README.md  make.bash
builtins/: prelude.kitsu
compiler/: compiler.cabal  hie.yaml  package.yaml  stack.yaml
compiler/app/: Main.hs
compiler/src/: AbstractInstances.hs  BuildParse.hs  Commons.hs  ComposeTools.hs  KitsuByteCode.hs  KitsuComponents.hs  KitsuParse.hs  KitsuPrelude.hs  KitsuPreludeConnection.hs  KitsuRuntimeConnection.hs  KitsuSeasoning.hs  KitsuSpiceRack.hs  KitsuStructure.hs  KitsuSyntaxBundles.hs  KitsuSyntaxBundling.hs  Lib.hs
compiler/test/: Spec.hs
cppmeta/: CMakeLists.txt  cmake_init.bash
cppmeta/test/: try_compile.cpp
kitpy/: kitsuruntime.py
notes/: binding.md  builtins.md  closures.md  expressions.md  preludeExports.md  procedures.md  processes.md  runtimeRequirements.md  typedef.md
test/: try_compile.cpp
testing/: example-expression.kitsu  example.kitsu
trans/: hie.yaml  package.yaml  stack.yaml  trans.cabal
trans/app/: Main.hs
trans/src/: Lib.hs
trans/test/: Spec.hs
